--- a/assets/css/login-style.css
+++ b/assets/css/login-style.css
@@ -14,6 +14,7 @@ body {
     height: 100vh;
     margin: -20px 0 50px;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 h1 {
