--- a/assets/css/ueberUns-style.css
+++ b/assets/css/ueberUns-style.css
@@ -8,6 +8,7 @@ body {
     /* font-family: Arial, Helvetica, sans-serif; */
     margin: 0;
     overflow-y: scroll;
+    overflow-x: hidden;
     }
 
     html {
